[gd_scene format=3 uid="uid://ckbdfob5b3xv6"]

[ext_resource type="Script" uid="uid://f74rsifsmsjq" path="res://scripts/MessageCard.gd" id="1_lqanm"]
[ext_resource type="LabelSettings" uid="uid://tlkpx1jnb0cx" path="res://assets/fonts/LabelSettings_Menu_P.tres" id="3_uci7g"]
[ext_resource type="Texture2D" uid="uid://d4gncxav7hsj0" path="res://assets/ui/smallerbtn.png" id="4_8u5ri"]
[ext_resource type="LabelSettings" uid="uid://breejx0iu0gh3" path="res://assets/fonts/LabelSettings_SmallerBtn.tres" id="5_gvj03"]
[ext_resource type="Shader" uid="uid://bmqdee4hsfgeu" path="res://shaders/XferBarndoor.gdshader" id="5_p4gs5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m0ik5"]
shader = ExtResource("5_p4gs5")
shader_parameter/progress = 1.0

[node name="MessageCardNode" type="Control" unique_id=1970429258]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqanm")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1565127715]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 4

[node name="MainVBox" type="VBoxContainer" parent="MarginContainer" unique_id=1127611663]
layout_mode = 2
theme_override_constants/separation = 12

[node name="InnerMargin" type="MarginContainer" parent="MarginContainer/MainVBox" unique_id=1887460816]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainVBox/InnerMargin" unique_id=1666697164]
layout_mode = 2

[node name="MessageTxtLabel" type="Label" parent="MarginContainer/MainVBox/InnerMargin/VBoxContainer" unique_id=834050785]
unique_name_in_owner = true
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
text = "stuff"
label_settings = ExtResource("3_uci7g")
autowrap_mode = 2

[node name="SkipButton" type="TextureButton" parent="MarginContainer/MainVBox" unique_id=1218296217]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("4_8u5ri")

[node name="Label" type="Label" parent="MarginContainer/MainVBox/SkipButton" unique_id=191813338]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Skip"
label_settings = ExtResource("5_gvj03")
horizontal_alignment = 1
vertical_alignment = 1

[node name="XferRect" type="ColorRect" parent="." unique_id=445494145]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_m0ik5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.078431375, 0, 0.09803922, 1)

[node name="SkipBtnTimer" type="Timer" parent="." unique_id=1279175266]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="MarginContainer/MainVBox/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="timeout" from="SkipBtnTimer" to="." method="_on_skip_btn_timer_timeout"]
